# random-things

./: .gitignore  .gitmodules  README.md  electron-orbital-diagram-maker.py
c-sharp/Boids/: Boids.sln  README.md
c-sharp/Boids/Boids/: Boid.cs  Boids.csproj  Config.cs  Game1.cs  Program.cs  Utils.cs
c-sharp/GoFasterDiagonally/: GoFasterDiagonally.sln  README.md
c-sharp/GoFasterDiagonally/GoFasterDiagonally/: GoFasterDiagonally.csproj  ModEntry.cs  (+1 more)
c-sharp/MarkovChain/: MarkovChain.sln  README.md
c-sharp/OsuDatabaseFileCreatorRoot/: README.md
c-sharp/adventofcode/: README.md  adventofcode.sln
c-sharp/factorizer/: README.md  factorizer.sln
python/: electron-orbital-diagram-maker.py  skidcode2cli.py
python/adventofcode/: README.md
python/cryptohack/: README.md  extendedgcd.py  favbyte.py  knowxorudont.py  utils.py  xorproperties.py  xorstarter.py
python/showuploaderbot/: README.md  REQUIREMENTS.txt  config.example.json  constants.example.py  convertfilestodiscorduploadable.py  ensure_venv.bat  filter_complex_builder.example.json  ihatecircularimport.py  main.py  obsoletefunctions.py  showuploaderbotclasses.py  showuploaderbotfuncs.py  splitepisodesegments.py  start_obsoletefunctions.bat  start_showsendingserver_client.bat  update_with_git.bat
python/tsk/: README.md  config.example.json  scrape_tsk.py
python/upload_stats/: PLUGININFO  README.md  __init__.py  classes.py  dbtesting.py
rust/mods_updater/: Cargo.toml  prototype.md
rust/mods_updater/src/: linux.rs  main.rs  windows.rs
rust/usernamegen/: Cargo.toml  main.rs  nya.vim  test
(+68 files in other folders)
