[package]
name = "mods_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
data-encoding = "2.9.0"
http = "1.3.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"

[target.'cfg(windows)'.dependencies]
win_dialog = "1.0.1"
windows = "0.62.2"
# windows = { version = "0.62.2", features = ["Win32"] }
